* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Apr 2017 Released 1.5.31 version
* Rename option --use_vs16 to --non_fully_qualified (effectivly reversing the default)
* Make description labels in info popover selectable to be able to copy and paste their contents
* Sort similar emoji with the same number of matching labels by cldr_order distance
* Map cldr subgroup 'person-sport' to emojione category 'activity'
* Make the categorie listings and the search work right when using --use_vs16
* Always store only non-fully-qualified emoji or emoji-sequences in the internal dictionary
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 29 Mar 2017 Released 1.5.30 version
* Update translations from zanata (de, pl, uk updated)
* Use string order as a fallback to cldr_order in category listings
* The rainbow flag should be a zwj sequence
* Also display the Unicode version in the emoji info popover
* When looking up emoji or other characters via Unicode codepoint, ignore surrogates and private use characters
* Show the fonts really used to render an emoji in the info popover for the emoji
* Fix typo in translatable string
* itb_emoji.py: Use CLDR order to sort the candidates and the similar emoji if score is the same

* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Mar 2017 Released 1.5.29 version
* Update translations from zanata (de, pl updated)
* Add a “--version” command line option to emoji-picker
* itb_emoji.py: Also read emoji-test.txt (from unicode.org)
* emoji-picker: Set default font to first available in ['Noto Color Emoji', 'Emoji One', 'Symbola']
* Small parsing improvement of emoji-sequences.txt
* Add support to either use U+FE0F VARIATION SELECTOR-16 in emoji sequences or not
* emoji-picker: Show “∅ Search produced empty result.” when nothing matches in a search

* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Mar 2017 Released 1.5.28 version